; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_compare_hook.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_compare_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hook_handler = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @compare_hook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_hook(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.hook_handler**, align 8
  %7 = alloca %struct.hook_handler**, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.hook_handler**
  store %struct.hook_handler** %9, %struct.hook_handler*** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.hook_handler**
  store %struct.hook_handler** %11, %struct.hook_handler*** %7, align 8
  %12 = load %struct.hook_handler**, %struct.hook_handler*** %6, align 8
  %13 = load %struct.hook_handler*, %struct.hook_handler** %12, align 8
  %14 = getelementptr inbounds %struct.hook_handler, %struct.hook_handler* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.hook_handler**, %struct.hook_handler*** %7, align 8
  %17 = load %struct.hook_handler*, %struct.hook_handler** %16, align 8
  %18 = getelementptr inbounds %struct.hook_handler, %struct.hook_handler* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %15, %19
  br i1 %20, label %21, label %32

21:                                               ; preds = %2
  %22 = load %struct.hook_handler**, %struct.hook_handler*** %6, align 8
  %23 = load %struct.hook_handler*, %struct.hook_handler** %22, align 8
  %24 = getelementptr inbounds %struct.hook_handler, %struct.hook_handler* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.hook_handler**, %struct.hook_handler*** %7, align 8
  %27 = load %struct.hook_handler*, %struct.hook_handler** %26, align 8
  %28 = getelementptr inbounds %struct.hook_handler, %struct.hook_handler* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = sub nsw i64 %25, %29
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %3, align 4
  br label %42

32:                                               ; preds = %2
  %33 = load %struct.hook_handler**, %struct.hook_handler*** %6, align 8
  %34 = load %struct.hook_handler*, %struct.hook_handler** %33, align 8
  %35 = getelementptr inbounds %struct.hook_handler, %struct.hook_handler* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 8
  %37 = load %struct.hook_handler**, %struct.hook_handler*** %7, align 8
  %38 = load %struct.hook_handler*, %struct.hook_handler** %37, align 8
  %39 = getelementptr inbounds %struct.hook_handler, %struct.hook_handler* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 8
  %41 = sub nsw i32 %36, %40
  store i32 %41, i32* %3, align 4
  br label %42

42:                                               ; preds = %32, %21
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
